syntax = "proto3";

package auth;
option go_package = "github.com/onlineTraveling/auth/protobufs";

message UserSignUpFirstRequest {

    string email = 1 [json_name = "email"];
    string password = 2 [json_name = "password"];


}
message UserSignInRequest {
    string email = 1 [json_name = "email"];
    string password = 2 [json_name = "password"];
}
message UserSignUpSecondRequest {
    uint64 userId = 1 [json_name = "userId"];
    string code = 2 [json_name = "code"];
}

message UserSignUpSecondResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}

message UserSignUpFirstResponse {
    uint64 userId = 1 [json_name = "userId"];
}

import "google/protobuf/timestamp.proto";
message User {
    uint64 id = 1;
    string email = 2;             
    string passwordHash = 3;     
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp deleted_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    
}
